Created media queries for mobile view

--- a/decalApplication.html
+++ b/decalApplication.html
@@ -56,7 +56,6 @@
     <!-- v1 Sticky Header with topNav -->
     <header class="header" id="myHeader">
         <div class="logoBrand">
-            <!-- <a href="index.html"><img class="logo" src="./images..." alt="Hobby Shop logo"></a> -->
             <a href="./index.html"><h2 class="shopName">Hobby Capital</h2></a>
         </div>
         <div class="topNav">
@@ -133,7 +132,7 @@
         <div class="container">
             <div class="row appRow01">
                 <div class="col-sm-12 col-md-5 col-lg-5">
-                    <div class="card">
+                    <div class="card step1Card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 1: Clean Surface</h5>
@@ -153,7 +152,7 @@
             </div>
             <div class="row appRow02">
                 <div class="col-sm-12 col-md-5 col-lg-5">
-                    <div class="card">
+                    <div class="card step3Card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 3: Position Decal</h5>
@@ -173,7 +172,7 @@
             </div>
             <div class="row appRow03">
                 <div class="col-sm-12 col-md-5 col-lg-5">
-                    <div class="card">
+                    <div class="card step5Card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 5: Adhere Decal</h5>
@@ -216,7 +215,7 @@
 <footer>
     <div class="container">
         <div class="row footerRow01">
-            <div class="col-sm-12 col-md-3 col-lg-3">
+            <div class="col-sm-12 col-md-3 col-lg-3 footerList">
                 <ul>
                     <li>Shop</li>
                     <a href="#hobbyCategories"><li>Hobbies</li></a>
