--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
     <!-- v1 Sticky Header with topNav -->
     <header class="header" id="myHeader">
         <div class="logoBrand">
-            <!-- <a href="index.html"><img class="logo" src="./images..." alt="Hobby Shop logo"></a> -->
             <a href="./index.html"><h2 class="shopName">Hobby Capital</h2></a>
         </div>
         <div class="topNav">
@@ -101,7 +100,7 @@
         <div class="jumbotron jumbotron-fluid aboutCopy">
             <div class="container text-center">
                 <h2 class="text-center">About Hobby Shop</h2>
-                <p class="text-center">Description of the hobby shop brand and their rmission. Copy describing what they have to offer their customers.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non sapien eget quam congue ipsum dignissim at id. Mus nisl, condimentum laoreet bibendum.</p>
+                <p class="text-center">Description of the hobby shop brand and their mission. Copy describing what they have to offer their customers.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non sapien eget quam congue ipsum dignissim at id. Mus nisl, condimentum laoreet bibendum.</p>
             </div>
         </div>
     </section>
@@ -112,7 +111,7 @@
         <!-- Built with Bootstrap 4 grid -->
         <div class="container">
             <div class="row hobbyRow01">
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 card01">
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/3Dprinting.png" class="card-img-top" alt="3D Printing">
                         <div class="card-body">
@@ -120,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 card02">
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/GlassMaking.png" class="card-img-top" alt="Glass Making">
                         <div class="card-body">
@@ -128,7 +127,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 card03">
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/resinTable.png" class="card-img-top" alt="Resin Work Resin Work - resin tabletop">
                         <div class="card-body">
@@ -138,8 +137,8 @@
                 </div>
             </div> 
 
-            <div class="row">
-                <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="row hobbyRow02">
+                <div class="col-sm-12 col-md-4 col-lg-4 card04">
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/StickerMaking.png" class="card-img-top" alt="Sticker Making">
                         <div class="card-body">
@@ -147,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 card05">
                     <a href="./decalsGetStarted.html"><div class="card border-0 cardShadow">
                         <img src="./images/categories/VinylDecals.png" class="card-img-top" alt="white vinyl decal of an ulua">
                         <div class="card-body">
@@ -155,7 +154,7 @@
                         </div></a>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 card06">
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/WoodEngraving.png" class="card-img-top" alt="Wood Engraving">
                         <div class="card-body">
@@ -175,7 +174,7 @@
 <footer>
     <div class="container">
         <div class="row footerRow01">
-            <div class="col-sm-12 col-md-3 col-lg-3">
+            <div class="col-sm-12 col-md-3 col-lg-3 footerList">
                 <ul>
                     <li>Shop</li>
                     <a href="#hobbyCategories"><li>Hobbies</li></a>
