--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -56,7 +56,6 @@
     <!-- v1 Sticky Header with topNav -->
     <header class="header" id="myHeader">
         <div class="logoBrand">
-            <!-- <a href="index.html"><img class="logo" src="./images..." alt="Hobby Shop logo"></a> -->
             <a href="./index.html"><h2 class="shopName">Hobby Capital</h2></a>
         </div>
         <div class="topNav">
@@ -103,40 +102,40 @@
         <h2 class="text-center">Steps to Get Started</h2>
         <div class="container">
             <div class="row stepsRow01">
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 stepsCard">
                     <div class="card border-0">
                         <!-- <img src="..." class="card-img-top" alt="..." -->
-                        <i class="fas fa-pencil-alt fa-5x text-center"></i>
-                        <div class="card-body stepsIconCards text-center">
+                        <i class="fas fa-pencil-alt fa-5x text-left stepsIcon"></i>
+                        <div class="card-body stepsIconCards text-left">
                             <h4>Designing</h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 stepsCard">
                     <div class="card border-0">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
-                        <i class="fas fa-tools fa-5x text-center"></i>
-                        <div class="card-body stepsIconCards text-center">
+                        <i class="fas fa-tools fa-5x text-left stepsIcon"></i>
+                        <div class="card-body stepsIconCards text-left">
                             <h4>Equipment</h4>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row stepsRow02">
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 stepsCard">
                     <div class="card border-0">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
-                        <i class="fas fa-palette fa-5x text-center"></i>
-                        <div class="card-body stepsIconCards text-center">
+                        <i class="fas fa-palette fa-5x text-left stepsIcon"></i>
+                        <div class="card-body stepsIconCards text-left">
                             <h4>Creation Process</h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 stepsCard">
                     <div class="card border-0">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
-                        <i class="far fa-sticky-note fa-5x text-center"></i>
-                        <div class="card-body stepsIconCards text-center">
+                        <i class="far fa-sticky-note fa-5x text-left stepsIcon"></i>
+                        <div class="card-body stepsIconCards text-left">
                             <a href="./decalApplication.html"><h4>Decal Application</h4></a>
                         </div>
                     </div>
@@ -153,9 +152,9 @@
     <section id="resources">
         <div class="container">
             <div class="row resourcesRow">
-                <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="col-sm-12 col-md-4 col-lg-4 protipCard">
                     <div class="card-body resourceCard text-center">
-                        <h3>Pro Tips<br>&nbsp</h3>
+                        <h3>Pro Tips</h3>
                         <button type="button">Learn More</button>
                     </div>
                 </div>
@@ -179,10 +178,10 @@
 <footer>
     <div class="container">
         <div class="row footerRow01">
-            <div class="col-sm-12 col-md-3 col-lg-3">
+            <div class="col-sm-12 col-md-3 col-lg-3 footerList">
                 <ul>
                     <li>Shop</li>
-                    <a href="#hobbyCategories"><li>Hobbies</li></a>
+                    <a href="#hobbyCategories"><li>Hobbies</li></a> 
                     <li>Resources</li>
                 </ul>
             </div>
