Centered icons and text for basic steps

--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -105,8 +105,8 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 stepsCard">
                     <div class="card border-0">
                         <!-- <img src="..." class="card-img-top" alt="..." -->
-                        <i class="fas fa-pencil-alt fa-5x text-left stepsIcon"></i>
-                        <div class="card-body stepsIconCards text-left">
+                        <i class="fas fa-pencil-alt fa-5x text-center stepsIcon"></i>
+                        <div class="card-body stepsIconCards text-center">
                             <h4>Designing</h4>
                         </div>
                     </div>
@@ -114,8 +114,8 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 stepsCard">
                     <div class="card border-0">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
-                        <i class="fas fa-tools fa-5x text-left stepsIcon"></i>
-                        <div class="card-body stepsIconCards text-left">
+                        <i class="fas fa-tools fa-5x text-center stepsIcon"></i>
+                        <div class="card-body stepsIconCards text-center">
                             <h4>Equipment</h4>
                         </div>
                     </div>
@@ -125,8 +125,8 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 stepsCard">
                     <div class="card border-0">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
-                        <i class="fas fa-palette fa-5x text-left stepsIcon"></i>
-                        <div class="card-body stepsIconCards text-left">
+                        <i class="fas fa-palette fa-5x text-center stepsIcon"></i>
+                        <div class="card-body stepsIconCards text-center">
                             <h4>Creation Process</h4>
                         </div>
                     </div>
@@ -134,8 +134,8 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 stepsCard">
                     <div class="card border-0">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
-                        <i class="far fa-sticky-note fa-5x text-left stepsIcon"></i>
-                        <div class="card-body stepsIconCards text-left">
+                        <i class="far fa-sticky-note fa-5x text-center stepsIcon"></i>
+                        <div class="card-body stepsIconCards text-center">
                             <a href="./decalApplication.html"><h4>Decal Application</h4></a>
                         </div>
                     </div>
